--- a/style/style.css
+++ b/style/style.css
@@ -43,6 +43,8 @@
   border-radius: 20px;
   -webkit-box-shadow: rgba(52, 52, 58, 0.4) 0px 7px 29px 0px;
           box-shadow: rgba(52, 52, 58, 0.4) 0px 7px 29px 0px;
+  -webkit-animation: breathe 10s infinite;
+          animation: breathe 10s infinite;
 }
 
 .pozadina .kartica .vrijeme {
@@ -56,5 +58,43 @@
   margin-top: 20px;
   color: white;
   text-shadow: 4px 4px rgba(52, 52, 58, 0.5);
+}
+
+@-webkit-keyframes breathe {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  25% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  60% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+}
+
+@keyframes breathe {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  25% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  60% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
 }
 /*# sourceMappingURL=style.css.map */
