--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,7 @@
     height: 500px;
     border-radius: 20px;
     box-shadow: rgba(52, 52, 58, 0.4) 0px 7px 29px 0px;
+    animation: breathe 10s infinite;
     .vrijeme {
       font-size: 90px;
       color: white;
@@ -37,6 +38,24 @@
       margin-top: 20px;
       color: white;
       text-shadow: 4px 4px rgba(52, 52, 58, 0.5);
+    }
+  }
+
+  @keyframes breathe {
+    0% {
+      transform: scale(0.95);
+    }
+
+    25% {
+      transform: scale(1);
+    }
+
+    60% {
+      transform: scale(0.95);
+    }
+
+    100% {
+      transform: scale(0.95);
     }
   }
 }
